--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "devDependencies": {
     "babel-eslint": "^6.0.2",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "eslint": "^2.7.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0"
   }
 }
