--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test_mocha": "mocha --timeout 60000 --reporter spec --ui qunit test/*.js",
     "lint": "eslint src test",
-    "test": "npm run lint && npm run test_mocha"
+    "test": "npm run lint && npm run test_mocha",
+    "test_istanbul": "./node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --timeout 60000 --ui qunit --reporter spec test/*.js",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +19,7 @@
     "eslint": "^2.7.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
-    "mocha": "^2.4.5",
-    "mocha-lcov-reporter": "^1.2.0"
+    "istanbul": "^0.4.3",
+    "mocha": "^2.4.5"
   }
 }
